# funcoes

./: main.py  pyproject.toml  requirements.txt
templates/: busca.html
